<resources>
    <string name="app_name">柒宝优品</string>
    <string name="home_page">首页</string>
    <string name="order">订单</string>
    <string name="person_center">个人中心</string>
    <string name="share">分享</string>
    <string name="self_surport">自营商城</string>
    <string name="my_wallet">我的钱包</string>
    <string name="can_withdraw">可提现余额</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_address">我的收货地址</string>
    <string name="open_shop">推广团队</string>
    <string name="setting">系统设置</string>
    <string name="acountsafe">账户安全</string>
    <string name="user_login">账号登录</string>
    <string name="please_input_username">请输入您的账号</string>
    <string name="please_input_password">请输入您的密码</string>
    <string name="login">登录</string>
    <string name="faster_register">快速注册</string>
    <string name="forget_password_with_question">忘记密码 ?</string>
    <string name="please_input_phone_number">请输入您的手机号</string>
    <string name="please_input_verification_code">请输入验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="input_recommend_code">请输入推荐码</string>
    <string name="register">注册</string>
    <string name="check_order">查看订单</string>
    <string name="register_tips">注册即表示您同意</string>
    <string name="server_protocol">《许可服务协议》</string>
    <string name="have_username_login">已有账号?点击登录</string>
    <string name="new_passwrod_with_colon">新密码:</string>
    <string name="input_new_passwrod">请输入新密码</string>
    <string name="make_sure_passwrod_with_colon">确认密码:</string>
    <string name="input_new_passwrod_again">请再次输入密码</string>
    <string name="finish">完成</string>
    <string name="next">下一步</string>
    <string name="person_data">个人资料</string>
    <string name="userpohto">头像</string>
    <string name="username">用户名称</string>
    <string name="phonenumber">手机号</string>
    <string name="sex">性别</string>
    <string name="select_sex_with_colon">选择性别:</string>
    <string name="woman">女</string>
    <string name="man">男</string>
    <string name="click_withdraw">提现</string>
    <string name="withdraw">提现</string>
    <string name="save">保存</string>
    <string name="count_name_with_colon">账户姓名:</string>
    <string name="choose_bank_with_colon">选择银行:</string>
    <string name="bank_number_with_colon">银行卡号:</string>
    <string name="opening_bank_with_colon">开户行名称:</string>
    <string name="submit">提交</string>
    <string name="sao_sao_add_friend">扫一扫,加入我们吧</string>
    <string name="invitation_code_with_colon">邀请码: </string>
    <string name="share_to_friend">分享给好友</string>
    <string name="order_num_with_colon">订单号 :</string>
    <string name="sum_with_colon">合计 :</string>
    <string name="pay_way_with_colon">支付方式 :</string>
    <string name="receive_goods_people_message">收货人信息</string>
    <string name="receive_goods_people_with_colon">收货人 :</string>
    <string name="telephone_with_colon">电话 :</string>
    <string name="address_with_colon">地址 :</string>
    <string name="receive_time_with_colon">送达时间 :</string>
    <string name="slect_category">请选择类别</string>
    <string name="distribution">配送</string>
    <string name="go_shop">到店</string>
    <string name="order_time">预约时间</string>
    <string name="goods_message">商品信息</string>
    <string name="buyer_leave_message_with_colon">买家留言 :</string>
    <string name="leave_message_to_seller">给商家留言</string>
    <string name="sum">共</string>
    <string name="sum_goods">件商品</string>
    <string name="make_suer_receiver_goods">确认收货</string>
    <string name="make_suer_order_commit">确认下单</string>
    <string name="goods_sum_price_with_colon">商品合计 :</string>
    <string name="peisong_price_with_colon">配送费 :</string>
    <string name="packaging_price_with_colon">包装费 :</string>
    <string name="find_login_password">找回登录密码</string>
    <string name="register_username">账号注册</string>
    <string name="buy_what">点了</string>
    <string name="shop_synthesize_comment_with_colon">店铺综合评价 :</string>
    <string name="search">搜索</string>
    <string name="hot_search">热门搜索</string>
    <string name="history_search">历史搜索</string>
    <string name="clear_history_record">清空历史纪录</string>
    <string name="send_ready">已发送,请稍等</string>
    <string name="sec">秒</string>
    <string name="more">更多</string>
    <string name="search_u_want_goods">搜索您想要的商品</string>
    <string name="search_seller">输入商家名称</string>
    <string name="shop_comm_content">亲,写下购物体会吧,会对其他小伙伴提供参考哦!</string>
    <string name="no_name_comm">匿名评价</string>
    <string name="commit_comm">提交评价</string>
    <string name="pay_money_with_colon">支付金额 :</string>
    <string name="select_pay_way">选择支付方式</string>
    <string name="wechat_pay">微信支付</string>
    <string name="alipay_pay">支付宝支付</string>
    <string name="yue_pay">余额支付</string>
    <string name="ghtnet_pay">高汇通网关支付</string>
    <string name="net_pay">网关支付</string>
    <string name="fuyou_pay">富友支付</string>
    <string name="withdraw_pay">专区余额支付</string>
    <string name="yue_with_colon">余额 :</string>
    <string name="order_detail">订单详情</string>
    <string name="make_suer_order">确认订单</string>
    <string name="pay_order">支付方式</string>
    <string name="comprehensive_score">综合评分</string>
    <string name="store_score">店铺评分</string>
    <string name="store_introduce_with_colon">店铺介绍:</string>
    <string name="working_time_with_colon">营业时间:</string>
    <string name="phone_with_colon">电话：</string>
    <string name="go_settle">去结算</string>
    <string name="fen">/份</string>
    <string name="shop_car">购物车</string>
    <string name="clear_empty">清空</string>
    <string name="edit_login_psw">修改登录密码</string>
    <string name="app_versions_des">APP版本说明</string>
    <string name="about_us">关于我们</string>
    <string name="contact_us">联系我们</string>
    <string name="exit_login">退出登录</string>
    <string name="ok">确定</string>
    <string name="idcard_check">实名认证</string>
    <string name="idcard_name_with_colon">证件姓名:</string>
    <string name="idcard_number_with_colon">身份证号:</string>
    <string name="idcard_number">身份证号码</string>
    <string name="idcard_name">身份证姓名</string>
    <string name="saomiao_idcard_front">扫描身份证正面</string>
    <string name="saomiao_idcard_back">扫描身份证反面</string>
    <string name="choose_photo">选择照片</string>
    <string name="qianfajigou_with_colon">签发机构:</string>
    <string name="qianfajigou">签发机构</string>
    <string name="idcard_data_with_colon">有效期限:</string>
    <string name="idcard_data">身份证有效期</string>
    <string name="frinds_circle">推广团队</string>
    <string name="my_invite_code">我的推广二维码</string>
    <string name="my_inviter">我的推荐人 : </string>
    <string name="order_pay_success">订单支付成功</string>
    <string name="tank_you_buy">感谢您的购买</string>
    <string name="check_order_detail">查看订单详情</string>
    <string name="back_order_list">订单列表</string>
    <string name="fail_pay_again">没有支付成功,请重新支付</string>
    <string name="pay_again">重新支付</string>
    <string name="phone_num_error">电话号码不正确</string>
    <string name="psw_input_error">密码输入不正确</string>
    <string name="send_success">发送成功</string>
    <string name="register_success">注册成功!</string>
    <string name="code_input_error">请输入正确验证码</string>
    <string name="psw_input_not_same">两次输入密码不一致</string>
    <string name="current_location">[当前地址]</string>
    <string name="bank_manage">银行卡</string>
    <string name="add_bank">添加银行卡</string>
    <string name="cancel">取消</string>
    <string name="sure">确认</string>
    <string name="temp_no_evaluate">暂不评价</string>
    <string name="go_evaluate">去评价</string>
    <string name="fenrun_detail">分润明细</string>
    <string name="money_sum">金额</string>
    <string name="remark">备注</string>
    <string name="time">时间</string>
    <string name="state">状态</string>
    <string name="remaining_des">余额明细</string>
    <string name="tixian_des">提现明细</string>
    <string name="date">日期</string>
    <string name="collect">收藏</string>
    <string name="message">消息</string>
    <string name="add_address">新增收货地址</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="all_position">全国</string>
    <string name="all">全部</string>
    <string name="all_sort">全部分类</string>
    <string name="industry">行业</string>
    <string name="support_deliver">支持配送</string>
    <string name="no_support_deliver">不支持配送</string>
    <string name="full">满</string>
    <string name="full_free_deliver">免配送费</string>
    <string name="collect_success">操作成功!</string>
    <string name="add_cart_success">添加到购物车成功!</string>
    <string name="remove_cart_success">从购物车移除成功!</string>
    <string name="input_error">输入不正确</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem.
		You may need to restart the device.</string>
    <string name="all_picture">所有图片</string>
    <string name="zhang">张</string>
    <string name="take_picture">拍摄照片</string>
    <string name="folder_all">所有图片</string>
    <string name="msg_no_camera">没有找到系统相机!</string>
    <string name="msg_amount_limit">选择图片数量超过限制!</string>
    <string name="images">图片</string>
    <string name="preview">预览</string>
    <string name="share_fail">分享失败</string>
    <string name="share_cancel">分享取消</string>
    <string name="share_success">分享成功</string>
    <string name="old_psw_with_colon">旧密码:</string>
    <string name="please_now_psw">请输入当前密码</string>
    <string name="input_can_not_null">输入不能为空</string>
    <string name="psw_check_different">两次密码输入不一致</string>
    <string name="set_succuss">操作成功</string>
    <string name="create_time">注册时间</string>
    <string name="new_old_like">新密码与旧密码一致</string>
    <string name="edit_pay_psw">修改支付密码</string>
    <string name="psw_must_six">支付密码必须为6位纯数字</string>
    <string name="edit_address">编辑收货地址</string>
    <string name="phone_input_error">手机号输入有误</string>
    <string name="agree_xieyi">请先同意注册协议</string>
    <string name="psw_short">密码过短</string>
    <string name="edit_bank">修改银行卡</string>
    <string name="buynum_dayu_kucun">商品库存不足</string>
    <string name="buynum_dayu_ling">购买数不能小于0</string>
    <string name="send_time">送货时间</string>
    <string name="seller_num_with_colon">销量:</string>
    <string name="select_come_time">选择送达时间</string>
    <string name="come_soon">尽快送达</string>
    <string name="time_tips">(以支付时间为准)</string>
    <string name="yuji">预计</string>
    <string name="songda">送达</string>
    <string name="songhuo_time">请选择送货时间</string>
    <string name="agency_withdraw_tips">提现说明</string>
    <string name="about_agency_withdraw">关于提现</string>
    <string name="agency_withdraw_item1">1、区域合作提现日为每个月的10日</string>
    <string name="agency_withdraw_item2">2、提现申请提交后,后台将在2个工作日内处理完成</string>
    <string name="agency_withdraw_item3">3、提现金额提交后余额将需要后台审核后才会扣减，请勿重复提交</string>
    <string name="agency_withdraw_item4">4、单个区域的余额单独处理，分开提现</string>
    <string name="agency_withdraw_item5">5、个人提现金额需要为整万数</string>
    <string name="about_fee">关于手续费</string>
    <string name="about_fee_item1">1、合作商提现的手续费为提现总金额的20%</string>
    <string name="about_fee_item2">2、区域合作商费用补扣金额为扣除手续费后金额的30%</string>
    <string name="deposit_card">储蓄卡</string>
    <string name="credit_card">信用卡</string>
    <string name="consignee_name">收货人姓名:</string>
    <string name="please_edit_consignee_name">请输入收货人姓名</string>
    <string name="gentlemen">先生</string>
    <string name="lady">女士</string>
    <string name="please_edit_consignee_phone">请输入收货人手机号码</string>
    <string name="detail_address">详细地址:</string>
    <string name="consignee_address">收货人地址</string>
    <string name="detail_address_include_house">详细地址(如门牌号等)</string>
    <string name="account_type">账户类型:</string>
    <string name="example">例深圳宝安区**银行**分行</string>
    <string name="auth_fail">认证失败</string>
    <string name="re_auth">重新认证</string>
    <string name="auth_commit_sucess_tips">认证提交成功，我们将在1-2个工作日内完成审核</string>
    <string name="return_home_page">返回首页</string>
    <string name="return_person_center">返回个人中心</string>
    <string name="phone_number_colon">手机号:</string>
</resources>