<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/dialog_bg_share_news"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agency_withdraw_tips"
                android:textColor="@color/text_f7"
                android:textSize="@dimen/text_large_size"
                android:textStyle="bold" />
        </LinearLayout>

        <View style="@style/cutline_fine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_f7"
                android:textSize="@dimen/text_small_size"
                android:layout_marginTop="15dp"
                android:text="@string/about_agency_withdraw" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:textColor="@color/text_f7"
                android:textSize="@dimen/text_small_size"
                android:layout_marginTop="5dp"
                android:text="@string/agency_withdraw_item1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:textColor="@color/text_f7"
                android:textSize="@dimen/text_small_size"
                android:layout_marginTop="5dp"
                android:text="@string/agency_withdraw_item2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:textColor="@color/text_f7"
                android:textSize="@dimen/text_small_size"
                android:layout_marginTop="5dp"
                android:text="@string/agency_withdraw_item3" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:textColor="@color/text_f7"
                android:textSize="@dimen/text_small_size"
                android:layout_marginTop="5dp"
                android:text="@string/agency_withdraw_item4" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:textColor="@color/text_f7"
                android:textSize="@dimen/text_small_size"
                android:layout_marginTop="5dp"
                android:text="@string/agency_withdraw_item5" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                  android:textColor="@color/text_f7"
                android:textSize="@dimen/text_small_size"
                android:layout_marginTop="25dp"
                android:text="@string/about_fee" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:textColor="@color/text_f7"
                android:textSize="@dimen/text_small_size"
                android:layout_marginTop="5dp"
                android:text="@string/about_fee_item1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                  android:textColor="@color/text_f7"
                android:textSize="@dimen/text_small_size"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/about_fee_item2" />

        </LinearLayout>

        <View style="@style/cutline_fine" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="right"
        android:src="@drawable/close" />

</FrameLayout>