<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical">

    <include layout="@layout/head_operation" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:text="@string/consignee_name"
            android:textColor="@color/text_f7"
            android:textSize="@dimen/text_normal_size" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/please_edit_consignee_name"
            android:maxLength="15"
            android:singleLine="true"
            android:textColorHint="@color/text_c1"
            android:textSize="@dimen/text_normal_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="60dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:id="@+id/ll_man"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_man"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/shangpinzhuangtai_select" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/gentlemen" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_woman"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_woman"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/shangpinzhuangtai_nor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/lady" />
        </LinearLayout>
    </LinearLayout>

    <View style="@style/cutline_fine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:text="@string/phone_number_colon"
            android:textColor="@color/text_f7"
            android:textSize="@dimen/text_normal_size" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/please_edit_consignee_phone"
            android:inputType="number"
            android:maxLength="11"
            android:singleLine="true"
            android:textColor="@color/text_f7"
            android:textColorHint="@color/text_c1"
            android:textSize="@dimen/text_normal_size" />
    </LinearLayout>

    <View style="@style/cutline_fine" />

    <LinearLayout
        android:id="@+id/ll_locate"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:text="@string/detail_address"
            android:textColor="@color/text_f7"
            android:textSize="@dimen/text_normal_size" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/consignee_address"
            android:textColor="@color/text_f7"
            android:textSize="@dimen/text_normal_size" />

        <ImageView
            style="@style/arrow_right_gray"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="20dp" />
    </LinearLayout>

    <View style="@style/cutline_fine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/opening_bank_with_colon"
            android:textColor="@color/text_f7"
            android:textSize="@dimen/text_normal_size"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/et_address_des"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/detail_address_include_house"
            android:maxLength="50"
            android:textColorHint="@color/text_c1"
            android:textSize="@dimen/text_normal_size" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_select_bar_height"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/textview_btn_comm_bg"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/text_xlarge_size" />

</LinearLayout>