<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical" >

    <include layout="@layout/head_operation" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_select_bar_height"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/count_name_with_colon"
            android:textColor="@color/text_f7"
            android:textSize="@dimen/text_normal_size" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:maxLength="15"
            android:singleLine="true"
            android:textColorHint="@color/text_c1"
            android:textSize="@dimen/text_normal_size" />
    </LinearLayout>

    <View style="@style/cutline_fine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_select_bar_height"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/account_type"
            android:textColor="@color/text_f7"
            android:textSize="@dimen/text_normal_size" />

        <RadioGroup
            android:id="@+id/bank_type_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/chuxuka"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:button="@null"
                android:checked="true"
                android:drawableLeft="@drawable/bg_checkbox"
                android:drawablePadding="5dp"
                android:text="@string/deposit_card"
                android:textColor="@color/text_f7"
                android:textSize="@dimen/text_normal_size" />

            <RadioButton
                android:id="@+id/xinyongka"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:button="@null"
                android:drawableLeft="@drawable/bg_checkbox"
                android:drawablePadding="5dp"
                android:text="@string/credit_card"
                android:textColor="@color/text_f7"
                android:textSize="@dimen/text_normal_size" />
        </RadioGroup>
    </LinearLayout>

    <View style="@style/cutline_fine" />

    <LinearLayout
        android:id="@+id/ll_select_bank"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_select_bar_height"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/choose_bank_with_colon"
            android:textColor="@color/text_f7"
            android:textSize="@dimen/text_normal_size" />

        <TextView
            android:id="@+id/tv_bankname"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:textColor="@color/text_f7"
            android:textSize="@dimen/text_normal_size" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/down_triangle" />
    </LinearLayout>

    <View style="@style/cutline_fine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_select_bar_height"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/bank_number_with_colon"
            android:textColor="@color/text_f7"
            android:textSize="@dimen/text_normal_size" />

        <EditText
            android:id="@+id/bank_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:singleLine="true"
            android:maxLength="28"
            android:inputType="number"
            android:textColorHint="@color/text_c1"
            android:textSize="@dimen/text_normal_size" />
    </LinearLayout>

    <View style="@style/cutline_fine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_select_bar_height"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/opening_bank_with_colon"
            android:textColor="@color/text_f7"
            android:textSize="@dimen/text_normal_size" />

        <EditText
            android:id="@+id/et_open_bank"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/example"
            android:singleLine="true"
            android:maxLength="40"
            android:textColorHint="@color/text_c1"
            android:textSize="@dimen/text_normal_size" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_select_bar_height"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/textview_btn_comm_bg"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/text_xlarge_size" />

</LinearLayout>