<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/head_operation" />

    <LinearLayout
        android:id="@+id/ll_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
     >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:src="@drawable/pay_fail" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/auth_fail"
            android:textColor="@color/text_f7"
            android:textSize="@dimen/text_normal_size" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/text_f7"
            android:textSize="@dimen/text_normal_size" />

          <TextView
              android:id="@+id/replay"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:background="@drawable/bg_yellow_shape"
              android:paddingBottom="5dp"
              android:paddingLeft="10dp"
              android:paddingRight="10dp"
              android:paddingTop="5dp"
              android:text="@string/re_auth"
              android:textColor="@color/white"
              android:textSize="@dimen/text_normal_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_odentity_ing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:src="@drawable/pay_success" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/auth_commit_sucess_tips"
            android:textColor="@color/text_f7"
            android:textSize="@dimen/text_normal_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center" >

            <TextView
                android:id="@+id/to_index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/bg_yellow_shape"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/return_home_page"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal_size" />

            <TextView
                android:id="@+id/to_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/bg_white_shape"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/return_person_center"
                android:textColor="@color/text_f7"
                android:textSize="@dimen/text_normal_size" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>